--- a/package.json
+++ b/package.json
@@ -21,20 +21,30 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/camera": "^4.18.0",
     "@ionic-native/core": "~4.17.0",
+    "@ionic-native/file": "^4.18.0",
+    "@ionic-native/file-chooser": "^4.18.0",
+    "@ionic-native/file-transfer": "^4.18.0",
     "@ionic-native/firebase": "^4.18.0",
     "@ionic-native/firebase-authentication": "^4.18.0",
+    "@ionic-native/media": "^4.18.0",
     "@ionic-native/native-storage": "^4.18.0",
     "@ionic-native/splash-screen": "~4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
     "@ionic/storage": "2.2.0",
     "angularfire2": "^5.1.1",
     "cordova-android": "7.1.4",
+    "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "6.0.1",
+    "cordova-plugin-file-transfer": "1.7.1",
+    "cordova-plugin-filechooser": "1.0.1",
     "cordova-plugin-firebase": "2.0.5",
     "cordova-plugin-firebase-authentication": "1.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.3.1",
+    "cordova-plugin-media": "5.0.2",
     "cordova-plugin-nativestorage": "2.3.2",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
@@ -65,7 +75,12 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-filechooser": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-camera": {},
+      "cordova-plugin-media": {}
     },
     "platforms": [
       "android"
