--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "@ionic-native/firebase-authentication": "^4.18.0",
     "@ionic-native/media": "^4.18.0",
     "@ionic-native/native-storage": "^4.18.0",
+    "@ionic-native/paypal": "^4.18.0",
     "@ionic-native/splash-screen": "~4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
     "@ionic/storage": "2.2.0",
     "angularfire2": "^5.1.1",
+    "card.io.cordova.mobilesdk": "2.1.0",
+    "com.paypal.cordova.mobilesdk": "3.5.0",
     "cordova-android": "7.1.4",
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
@@ -80,7 +83,8 @@
       "cordova-plugin-filechooser": {},
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-camera": {},
-      "cordova-plugin-media": {}
+      "cordova-plugin-media": {},
+      "com.paypal.cordova.mobilesdk": {}
     },
     "platforms": [
       "android"
