--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cordova-support-google-services": "^1.2.1",
     "firebase": "^5.7.0",
     "ionic-angular": "3.9.2",
+    "ionic-img-viewer": "^2.9.0",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
