--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/firebase-authentication": "^4.18.0",
     "@ionic-native/media": "^4.18.0",
     "@ionic-native/native-storage": "^4.18.0",
+    "@ionic-native/onesignal": "^4.18.0",
     "@ionic-native/paypal": "^4.18.0",
     "@ionic-native/splash-screen": "~4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
@@ -58,6 +59,7 @@
     "ionic-angular": "3.9.2",
     "ionic-img-viewer": "^2.9.0",
     "ionicons": "3.0.0",
+    "onesignal-cordova-plugin": "2.4.6",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -85,7 +87,8 @@
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-camera": {},
       "cordova-plugin-media": {},
-      "com.paypal.cordova.mobilesdk": {}
+      "com.paypal.cordova.mobilesdk": {},
+      "onesignal-cordova-plugin": {}
     },
     "platforms": [
       "android"
