--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/badge": "^4.18.0",
     "@ionic-native/camera": "^4.18.0",
     "@ionic-native/core": "~4.17.0",
     "@ionic-native/file": "^4.18.0",
@@ -39,6 +40,7 @@
     "card.io.cordova.mobilesdk": "2.1.0",
     "com.paypal.cordova.mobilesdk": "3.5.0",
     "cordova-android": "7.1.4",
+    "cordova-plugin-badge": "0.8.8",
     "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "6.0.1",
@@ -88,7 +90,8 @@
       "cordova-plugin-camera": {},
       "cordova-plugin-media": {},
       "com.paypal.cordova.mobilesdk": {},
-      "onesignal-cordova-plugin": {}
+      "onesignal-cordova-plugin": {},
+      "cordova-plugin-badge": {}
     },
     "platforms": [
       "android"
