--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/file-transfer": "^4.18.0",
     "@ionic-native/firebase": "^4.18.0",
     "@ionic-native/firebase-authentication": "^4.18.0",
+    "@ionic-native/in-app-browser": "^4.19.0",
     "@ionic-native/media": "^4.18.0",
     "@ionic-native/native-storage": "^4.18.0",
     "@ionic-native/onesignal": "^4.18.0",
@@ -48,8 +49,9 @@
     "cordova-plugin-filechooser": "1.0.1",
     "cordova-plugin-firebase": "2.0.5",
     "cordova-plugin-firebase-authentication": "1.0.1",
+    "cordova-plugin-inappbrowser": "3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^2.3.1",
+    "cordova-plugin-ionic-webview": "^3.0.0",
     "cordova-plugin-media": "5.0.2",
     "cordova-plugin-nativestorage": "2.3.2",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -80,9 +82,6 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {
-        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
-      },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-file": {},
       "cordova-plugin-filechooser": {},
@@ -91,7 +90,9 @@
       "cordova-plugin-media": {},
       "com.paypal.cordova.mobilesdk": {},
       "onesignal-cordova-plugin": {},
-      "cordova-plugin-badge": {}
+      "cordova-plugin-badge": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android"
